--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming Landing Page Design</title>
-    <link rel="stylesheet" href="Styles/gamer.css">
-    <link rel="stylesheet" href="Styles/responsive.css">
+
+    <link rel="stylesheet" href="gamer.css">
+
 </head>
+
 <body>
     <header>
-
+        <section class="head-container">
+            <div class="logos">
+                <img class="logo-photo" src="images/Frame.png">
+                <h1 class="logo-text">Gamer</h1>
+            </div>
+            <nav class="nav-option">
+                <li>About Us</li>
+                <li>Developers</li>
+                <li>Follow Us On</li>
+            </nav>
+        </section>
+        <section class="banner-container">
+            <div class="main-banner">
+                <div class="banner-info">
+                    <h2>Play Like The</h2>
+                    <h1>G.O.A.T.</h1>
+                    <p>1-Click instant play</p>
+                    <p>No Download</p>
+                    <p>1000s of supported online games</p>
+                    <div class="button">
+                        <button class="btn-1">Sign In</button>
+                        <button class="btn-2">Go Rogue</button>
+                    </div>
+                </div>
+            </div>
+            <div class="banner-pic">
+                <img class="banner-photo" src="images/Group 18.png"> </section>
+            </div>
     </header>
     <main>
 
@@ -18,4 +48,5 @@
 
     </footer>
 </body>
+
 </html>
