online games section done

--- a/index.html
+++ b/index.html
@@ -38,11 +38,49 @@
                 </div>
             </div>
             <div class="banner-pic">
-                <img class="banner-photo" src="images/Group 18.png"> </section>
-            </div>
+                <img class="banner-photo" src="images/Group 18.png">
+        </section>
+        </div>
     </header>
     <main>
+        <section class="gamer-container">
+            <div class="gamer-picture">
+                <img src="images/pngwing 4.png">
+            </div>
+            <div class="gamer-info">
+                <h2>We are gamer</h2>
+                <p>An international digital games and entertainment<br> company. We develop, publish and distribute
+                    multiplayer<br> mobile games. We reach over 400 million players each<br> month and our audience
+                    keeps growing.</p>
+                <button class="btn-1">KNOW MORE </button>
+                <H5><span class="our-purpose">Our purpose...</span><br>
+                    <span class="unleash">“unleash the gamer in everyone”</span>
+                </H5>
+            </div>
+        </section>
+        <section class="online-games">
+            <h2>Online Games Funny Videos</h2>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="boxes">
+                <div class="box">
+                    <img class="box-img" src="images/Rectangle 4.png">
+                    <p>No Download. No Installs. <br>Play games Instantly <br>on Gamer.</p>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="images/Rectangle 5.png">
+                    <p>Did you score?<br> #unblockedgames #school</p>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="images/Rectangle 6.png">
+                    <p>Breaking game <br>records like OG</p>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="images/Rectangle 7.png">
+                    <p>Busted gaming on school<br> laptop, but you are still lit.</p>
+                </div>
+            </div>
 
+        </section>
     </main>
     <footer>
 
