--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@
             </div>
 
         </section>
+        <section class="play-instantly">
+            <div class="the-text">
+                <h2>Play Instantly,<br>
+                    No Downloads<br>
+                    No Installs.</h2>
+                <p>Play games online for free without<br> downloading. Just click the Play button<br> and play instantly in your
+                    browser.</p>
+            </div>
+            <div class="the-image">
+                <img class="man-gun" src="images/Rectangle 55.png">
+            </div>
+        </section>
+        <section>
+            
+        </section>
     </main>
     <footer>
 
