--- a/index.html
+++ b/index.html
@@ -86,15 +86,44 @@
                 <h2>Play Instantly,<br>
                     No Downloads<br>
                     No Installs.</h2>
-                <p>Play games online for free without<br> downloading. Just click the Play button<br> and play instantly in your
+                <p>Play games online for free without<br> downloading. Just click the Play button<br> and play instantly
+                    in your
                     browser.</p>
             </div>
             <div class="the-image">
                 <img class="man-gun" src="images/Rectangle 55.png">
             </div>
         </section>
-        <section>
+        <section class="career-section">
+            <div class="career-info">
+                <h2>Careers</h2>
+                <p>Gamer is driven to create the best and most fun games for our millions of players all around the
+                    world, and we,re always on the lookout for more top talent to join our growing team. If you,d like
+                    to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
             
+            <div class="points">
+                <div class="left-points">
+                    Multimedia Artist +<br>
+                    Data Engineer +<br>
+                    Adroid Engineer +<br>
+                    Server Developer +<br>
+                    Group Financial Accountant +<br>
+                    Senior User Acuisition Specialist +
+                    
+                </div>
+                <div class="right-points">
+                    Lisbon, Portugal<br>
+                    Lisbon, Portugal<br>
+                    Zoetermeer, Netherlands<br>
+                    Lisbon, Portugal<br>
+                    London, United Kingdom<br>
+                    Lisbon, Portugal
+                </div>
+            </div>
+            <button class="btn-3">
+                See all positions
+            </button>
+            </div>
         </section>
     </main>
     <footer>
