game box sections done

--- a/index.html
+++ b/index.html
@@ -125,6 +125,46 @@
             </button>
             </div>
         </section>
+        <section class="some-games">
+            <div class="games">
+                <div class="game-box">
+                    <img src="images/Rectangle 11.png">
+                    <h5>Action Games</h5>
+                </div>
+                <div class="game-box">
+                    <img src="images/Rectangle 11.png">
+                    <h5>Action Games</h5>
+                </div>
+                <div class="game-box">
+                    <img src="images/Rectangle 11.png">
+                    <h5>Action Games</h5>
+                </div>
+                <div class="game-box">
+                    <img src="images/Rectangle 11.png">
+                    <h5>Action Games</h5>
+                </div>
+                <div class="game-box">
+                    <img src="images/Rectangle 11.png">
+                    <h5>Action Games</h5>
+                </div>
+                <div class="game-box">
+                    <img src="images/Rectangle 11.png">
+                    <h5>Action Games</h5>
+                </div>
+                <div class="game-box">
+                    <img src="images/Rectangle 11.png">
+                    <h5>Action Games</h5>
+                </div>
+                <div class="game-box">
+                    <img src="images/Rectangle 11.png">
+                    <h5>Action Games</h5>
+                </div>
+                <div class="game-box">
+                    <img src="images/Rectangle 11.png">
+                    <h5>Action Games</h5>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
