--- a/index.html
+++ b/index.html
@@ -132,36 +132,36 @@
                     <h5>Action Games</h5>
                 </div>
                 <div class="game-box">
-                    <img src="images/Rectangle 11.png">
+                    <img src="images/Rectangle 12.png">
+                    <h5>Adventure Games</h5>
+                </div>
+                <div class="game-box">
+                    <img src="images/Rectangle 13.png">
                     <h5>Action Games</h5>
                 </div>
                 <div class="game-box">
-                    <img src="images/Rectangle 11.png">
-                    <h5>Action Games</h5>
+                    <img src="images/Rectangle 14.png">
+                    <h5>Arcade Games</h5>
                 </div>
                 <div class="game-box">
-                    <img src="images/Rectangle 11.png">
-                    <h5>Action Games</h5>
+                    <img src="images/Rectangle 15.png">
+                    <h5>Educational Games</h5>
                 </div>
                 <div class="game-box">
-                    <img src="images/Rectangle 11.png">
-                    <h5>Action Games</h5>
+                    <img src="images/Rectangle 16.png">
+                    <h5>Role Palying Games</h5>
                 </div>
                 <div class="game-box">
-                    <img src="images/Rectangle 11.png">
-                    <h5>Action Games</h5>
+                    <img src="images/Rectangle 17.png">
+                    <h5>AMusic & Audio Games</h5>
                 </div>
                 <div class="game-box">
-                    <img src="images/Rectangle 11.png">
-                    <h5>Action Games</h5>
+                    <img src="images/Rectangle 18.png">
+                    <h5>Puzzle Games</h5>
                 </div>
                 <div class="game-box">
-                    <img src="images/Rectangle 11.png">
-                    <h5>Action Games</h5>
-                </div>
-                <div class="game-box">
-                    <img src="images/Rectangle 11.png">
-                    <h5>Action Games</h5>
+                    <img src="images/Rectangle 19.png">
+                    <h5>Strategy Games</h5>
                 </div>
             </div>
         </section>
