--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="gamer.css">
 
+    <script src="https://kit.fontawesome.com/9c6c139a23.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -167,7 +169,33 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-logo">
+            <img class="logo-photo" src="images/Frame.png">
+            <h1 class="logo-text">Gamer</h1>
+        </div>
+        <nav class="footer-option">
+            <li>Our Story</li>
+            <li>Games</li>
+            <li>Web Games</li>
+            <li>Careers</li>
+            <li>Support</li>
+            <li>My Account</li>
+        </nav>
+        <div class="footer-icon">
+            <i class="fa-brands fa-twitter fa-2xl"></i>
+            <i class="fa-brands fa-facebook fa-2xl"></i>
+            <i class="fa-brands fa-instagram fa-2xl"></i>
+            <i class="fa-brands fa-youtube fa-2xl"></i>
+        </div>
+        <div class="alert-line">
+            <p>Terms and Conditions</p>
+            <p>Privacy Policy</p>
+            <p>Cookie Policy</p>
+            <p>Privacy Settings</p>
+        </div>
+        <div class="alert-line">
+            Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+        </div>
     </footer>
 </body>
 
