--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming Landing Page Design</title>
 
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="gamer.css">
 
     <script src="https://kit.fontawesome.com/9c6c139a23.js" crossorigin="anonymous"></script>
@@ -17,12 +18,12 @@
         <section class="head-container">
             <div class="logos">
                 <img class="logo-photo" src="images/Frame.png">
-                <h1 class="logo-text">Gamer</h1>
+                <h1 class="logo-text"><span class="common-color">G</span>amer</h1>
             </div>
             <nav class="nav-option">
                 <li>About Us</li>
                 <li>Developers</li>
-                <li>Follow Us On</li>
+                <li class="gray">Follow Us On <span> <i class="fa-brands fa-youtube fa-xl" style="color:red"> </i> </span> <i class="fa-brands fa-tiktok fa-xl"> </i> </span> <li>
             </nav>
         </section>
         <section class="banner-container">
@@ -61,7 +62,7 @@
             </div>
         </section>
         <section class="online-games">
-            <h2>Online Games Funny Videos</h2>
+            <h2>Online Games <span class="funny-vdeo">Funny Videos</span></h2>
             <p>A Collection of Hilarious Videos to Brighten Your Day</p>
             <div class="boxes">
                 <div class="box">
@@ -85,7 +86,7 @@
         </section>
         <section class="play-instantly">
             <div class="the-text">
-                <h2>Play Instantly,<br>
+                <h2><span class="common-color">Play Instantly,</span><br>
                     No Downloads<br>
                     No Installs.</h2>
                 <p>Play games online for free without<br> downloading. Just click the Play button<br> and play instantly
@@ -171,7 +172,7 @@
     <footer>
         <div class="footer-logo">
             <img class="logo-photo" src="images/Frame.png">
-            <h1 class="logo-text">Gamer</h1>
+            <h1 class="logo-text"><span class="common-color">G</span>amer</h1>
         </div>
         <nav class="footer-option">
             <li>Our Story</li>
