some changes added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <header>
+        <!-- header section -->
         <section class="head-container">
             <div class="logos">
                 <img class="logo-photo" src="images/Frame.png">
@@ -26,14 +27,16 @@
                 <li class="gray">Follow Us On <span> <i class="fa-brands fa-youtube fa-xl" style="color:red"> </i> </span> <i class="fa-brands fa-tiktok fa-xl"> </i> </span> <li>
             </nav>
         </section>
+        
+<!-- /* banner section starts */ -->
         <section class="banner-container">
             <div class="main-banner">
                 <div class="banner-info">
                     <h2>Play Like The</h2>
                     <h1>G.O.A.T.</h1>
-                    <p>1-Click instant play</p>
-                    <p>No Download</p>
-                    <p>1000s of supported online games</p>
+                    <p><i class="fa-solid fa-play"></i> 1-Click instant play</p><br>
+                    <p><i class="fa-solid fa-down-long"></i> No Download</p><br>
+                    <p><i class="fa-solid fa-users"></i> 1000s of supported online games</p>
                     <div class="button">
                         <button class="btn-1">Sign In</button>
                         <button class="btn-2">Go Rogue</button>
@@ -46,6 +49,7 @@
         </div>
     </header>
     <main>
+        <!-- /* gamer secton starts here */ -->
         <section class="gamer-container">
             <div class="gamer-picture">
                 <img src="images/pngwing 4.png">
@@ -61,6 +65,7 @@
                 </H5>
             </div>
         </section>
+        <!-- /* online games funny videos sections starts here */ -->
         <section class="online-games">
             <h2>Online Games <span class="funny-vdeo">Funny Videos</span></h2>
             <p>A Collection of Hilarious Videos to Brighten Your Day</p>
@@ -84,6 +89,7 @@
             </div>
 
         </section>
+        <!-- /* play instantly setion starts */ -->
         <section class="play-instantly">
             <div class="the-text">
                 <h2><span class="common-color">Play Instantly,</span><br>
@@ -97,6 +103,7 @@
                 <img class="man-gun" src="images/Rectangle 55.png">
             </div>
         </section>
+        <!-- /* careers section starts */ -->
         <section class="career-section">
             <div class="career-info">
                 <h2>Careers</h2>
@@ -128,6 +135,7 @@
             </button>
             </div>
         </section>
+        <!-- /* some games sections starts here */ -->
         <section class="some-games">
             <div class="games">
                 <div class="game-box">
@@ -169,6 +177,7 @@
             </div>
         </section>
     </main>
+    <!-- /* footer section starts here */ -->
     <footer>
         <div class="footer-logo">
             <img class="logo-photo" src="images/Frame.png">
